yaml/commits-to-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/ignore: "false"
    fluxcd.io/tag.commits-to: regex:^master-[a-f0-9]{8}$
  labels:
    app.kubernetes.io/instance: commits-to
    app.kubernetes.io/name: commits-to
    app.kubernetes.io/part-of: commits-to
    app.kubernetes.io/version: v1
  name: commits-to
  namespace: kingdonb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commits-to
  template:
    metadata:
      annotations:
        config.linkerd.io/trace-collector: oc-collector.tracing:55678
      labels:
        app: commits-to
    spec:
      containers:
      - args:
        - start
        command:
        - npm
        image: registry.cloud.okteto.net/kingdonb/commitsto:master-9c5fdd64
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:5000/api/v1/user/promises?username=kb
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: commits-to
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:5000/api/v1/user/promises?username=kb
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 250m
