yaml/lmc-app-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/ignore: "false"
    fluxcd.io/tag.web: regex:^[a-f0-9]{8}$
  name: lmc-app
  namespace: kingdonb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lmc-app
  template:
    metadata:
      labels:
        app: lmc-app
    spec:
      containers:
      - image: registry.cloud.okteto.net/kingdonb/lmc-app:d482d4f6
        name: lmc-app
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
      imagePullSecrets:
      - name: regcred
      - name: okteto-regcred
      securityContext:
        runAsUser: 999
        runAsGroup: 1000
        fsGroup: 1000
