yaml/commits-to-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kingdonb
  name: commits-to
  labels:
    app.kubernetes.io/instance: commits-to
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: commits-to
  type: ClusterIP
