yaml/lmc-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmc-app
  annotations:
    dev.okteto.com/auto-ingress: "true"
  namespace: kingdonb
spec:
  type: ClusterIP  
  ports:
  - name: "lmc-app"
    port: 3000
  selector:
    app: lmc-app
