yaml/commits-to-ingress-kb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    fluxcd.io/ignore: "true"
    cert-manager.io/issuer: okteto-http01
    dev.okteto.com/auto-ingress: "false"
    dev.okteto.com/generate-host: ""
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/limit-rps: "20"
  labels:
    dev.okteto.com/deployed-by: kingdonb
  name: okteto-kb-commits-to
  namespace: kingdonb
spec:
  rules:
  - host: kb.wkstest.xyz
    http:
      paths:
      - backend:
          serviceName: commits-to
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - kb.wkstest.xyz
    secretName: okteto-kb-wkstest-xyz-tls
